styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.logo {
  margin-right: 10px !important;
  height: 30px;
  width: 30px;
}
.logo-footer {
  margin-right: 10px;
  height: 30px;
  width: 30px;
}
.newsletter {
  color: white;
  font-size: 18px;
  font-weight: bold;
}
.private {
  color: rgba(7, 10, 19, 0.6);
  font-weight: 400;
  font-size: 19px;
}
.brand {
  height: 30px;
}
.nav-brand {
  padding-right: 290px;
  z-index: 1;
}
.nav-b {
  margin-left: 135px;
}
.nav {
  margin-left: auto;
  margin-right: auto;
}
.nav-brand2 {
  padding-right: 200px;
  z-index: 1;
  margin-right: auto;
  margin-left: auto;
}
.service {
  margin-top: 100px;
  margin-left: 150px;
  padding-top: 30px;
}
.book-btn {
  background-color: #a63634;
  color: white;
  font-weight: 700;
  font-size: 20px;
  line-height: 36px;
  margin-top: 40px;
}
.book-btn:hover {
  background-color: black;
}
.d-review {
  font-size: 18px;
  line-height: 26px;
  text-align: left !important;
}
.book-btn a {
  text-decoration: none;
  color: white;
}
.service-title {
  font-weight: 700;
  font-size: 55px;
}
.draw1 {
  padding-right: 20px;
  height: 130px;
  position: absolute;
  top: 65px;
}
.carousel-indicators [data-bs-target] {
  box-sizing: content-box;
  flex: 0 1 auto;
  width: 15px; /* change width */
  height: 15px; /* change height */
  padding: 0;
  margin-right: 3px;
  margin-left: 3px;
  text-indent: -999px;
  cursor: pointer;
  background-color: #fff;
  background-clip: padding-box;
  border: 0;
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  opacity: 0.5;
  transition: opacity 0.6s ease;
  border-radius: 100%; /* add border-radius */
}
.carousel-indicators li {
  margin-top: 10px;
  width: 10px;
  height: 10px;
  border-radius: 100%;
}

.carousel-indicators :active {
  background-color: black !important;
}
.my-form {
  background-color: #ffffff;
}
.rectangle {
  height: 630px;
  width: 500px;
}
.student {
  background-color: #b84b40;
  height: 560px;
  width: 550px;
  z-index: 1;
  direction: rtl;
  margin-top: 45px;
  border-radius: 14px;
  margin-bottom: 40px;
}
.stud-img {
  margin-top: 50px;
  margin-right: 40px;
  background: #fed7bd;
  width: 600px;
  border-radius: 12px;
  height: 550px;
}
.stud-img2 {
  width: 600px;
  border-radius: 12px;
  height: 550px;
}
.hero {
  padding-top: 50px;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.why-head {
  margin-left: 130px !important;
}
.about-service {
  font-size: 22px;
  line-height: 30px;
  font-family: Helvetica;
}
body {
  font-family: Helvetica;
  overflow-x: hidden;
}
/*  */
#card-img {
  height: 85px;
  padding: 6px;
  width: 85px;
  margin-bottom: 5px;
}
#card {
  border-radius: 9px;
  padding-left: 15px;
  padding-right: 15px;
  width: 280px;
  height: 290px;
  text-align: center;
}
.student2 {
  background: #fed7bd;
  width: 570px;
  border-radius: 14px;
  z-index: 1;
}

.subtract {
  height: 130px;
}
.booking {
  text-align: center;
  margin-left: 00px;
}
.subtract2 {
  height: 100px;
  z-index: -1;
}
.num-fig {
  margin-top: 20px;
  z-index: 1;
  height: 90px;
  margin-right: 20px;
}
.text-box {
  align-items: center;
  justify-content: center;
  padding: 10px;

  border-radius: 6px;
}
.social-title {
  color: #ffffff8d;
  font-weight: normal !important;
}
.step-sect {
  margin-top: 50px;
}
.step-title {
  color: #070a13;
  text-align: left;
  margin-left: 20px;
  font-weight: 400;
  font-size: 22px;
  line-height: 30px;
  font-weight: 400;
}
.d-step {
  font-weight: 300;
  font-size: 20px;
}
.all-steps {
  margin-top: auto;
  margin-bottom: auto;
  margin-right: auto;
  margin-left: auto;
}
.step {
  width: fit-content;
}
.review {
  width: 340px;
  height: 344px;
  padding: 20px;
}
.reviews-sect {
  padding: 10px;
  padding-bottom: 30px;
}
.form-error {
  color: red;
  font-style: italic;
  font-size: 14px;
}
.stud-sub {
  height: 80px;
  width: 200px;
  float: right;
}
.review-container {
  margin-bottom: 20px;
  margin-left: auto;
  margin-right: auto;
}
.avatar {
  height: 70px;
  padding: 5px;
}
.rv-sm {
  display: none;
}
.tutor {
  width: 500px;
  margin-left: 150px !important;
}

.become-btn:hover {
  background-color: black;
}
.become-btn {
  background-color: #a63634;
  color: white;
  font-weight: 700;
  font-size: 20px;
  line-height: 36px;
}
.back-image {
  height: 600px;
  width: 600px;
  z-index: -1;
  margin-top: -30px;
  background: #b84b40;
  border-radius: 14px;
}
.top-image {
  width: 580px;
  height: 540px;
  border-radius: 12px;
  z-index: 2;
}
.foot-links a {
  text-decoration: none;
  color: #ffffff8d;
}
.r-sect {
  margin-top: 150px;
  margin-bottom: 80px;
}
.tutor-sect {
  height: fit-content;
  margin-bottom: 250px;
}
.rect2 {
  border-radius: 14px;
  background: #fed7bd;
  z-index: 1;
  width: 650px;
  right: 40px;
  margin-top: 30px;
}
.tutor-images {
  border-radius: 12px;
  background: #fed7bd;
}
.footer {
  background: #1f3158;
  margin-top: 70px;
  padding: 70px;
}
.line {
  position: absolute;
  margin-top: 33px;
  margin-left: 40px;
  height: 260px;
}
.r-name {
  margin-top: 15px;
  line-height: 25px;
  font-weight: 700;
  font-size: 22px;
  color: #1f3158;
  text-align: left;
}
.social {
  height: 45px;
  width: 45px;
}
.footer span {
  color: #ffffff8d;
}
.copyright p {
  font-size: 13px;
  color: #ffffff8d;
}
.stud-img-sm {
  display: none;
}
.newsletter-btn {
  background-color: #a63634;
  color: white;
  width: 110px !important;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
}
.subscribe {
  width: 460px;
  background-color: inherit;
  color: white;
}
.cpr {
  margin-left: 70px;
}
.become-btn a {
  text-decoration: none !important;
  color: white;
}
.hr {
  color: white;
  margin-left: 70px;
  margin-top: 80px;
}
.bk-sm {
  display: none;
}
.tele {
  height: 20px;
}
.d-form {
  width: 360px;
}
#follow {
  display: none;
}
/* ... */

